[package]
name = "be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
env_logger = "0.10.1"
sea-orm = { version = "0.12", features = ["sqlx-postgres" , "runtime-tokio-native-tls" , "macros" ] }
reqwest = "0.11.22"
serde_json = "1.0.108"
derive_more = "0.99.17"
futures-util = "0.3.29"
futures = "0.3.29"