[workspace]
members = [".", "oauth"]

[package]
edition = "2021"
name = "plainly-rusty"
version = "0.1.0"
authors = ["yinnx <yinnnxt@gmail.com>"]
description = "Plainly a blog in Rust, with Seaography, dynamic async-graphql, and Github OAuth2 support"
license = "MIT"

[dependencies]
actix-web = { version = "4.3.1", default-features = false, features = [
    "macros",
    "rustls",
] }
async-graphql-actix-web = { version = "6.0.7" }
async-graphql = { version = "6.0.7", features = [
    "decimal",
    "chrono",
    "dataloader",
    "dynamic-schema",
] }
async-trait = { version = "0.1.72" }
sea-orm = { version = "0.12.0", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "seaography",
] }
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
lazy_static = { version = "1.4.0" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.8"
env_logger = "0.10.1"
log = "0.4"
jwt-simple = "0.11.9"
oauth = { path = "./oauth" }
actix-cors = "0.6.4"
rss = "2.0.6"

[dependencies.seaography]
git = "https://github.com/YiNNx/seaography.git"
branch = "main"
features = ["with-decimal", "with-chrono"]

[dev-dependencies]
serde_json = { version = "1.0.103" }
