[package]
name = "oauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.74"
lazy_static = { version = "1.4.0" }