[package]
name = "oauth"
version = "0.1.0"
edition = "2021"
authors = ["yinnx <yinnnxt@gmail.com>"]

[dependencies]
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde_json = "1.0.108"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.74"
lazy_static = { version = "1.4.0" }
http = "1.0.0"
